[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Difficulte.gd" type="Script" id=1]

[node name="Difficulte" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Facile" type="Button" parent="."]
margin_left = 173.0
margin_top = 225.0
margin_right = 222.0
margin_bottom = 245.0
text = "Facile"

[node name="Normal" type="Button" parent="."]
margin_left = 176.0
margin_top = 279.0
margin_right = 235.0
margin_bottom = 299.0
text = "Normal"

[node name="Difficile" type="Button" parent="."]
margin_left = 173.0
margin_top = 336.0
margin_right = 234.0
margin_bottom = 356.0
text = "Difficile"

[connection signal="pressed" from="Facile" to="." method="_on_Facile_pressed"]
[connection signal="pressed" from="Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="Difficile" to="." method="_on_Difficile_pressed"]
